Fixed Java version compatibility issue with getFirst() (Java 21)